--- a/References.bib
+++ b/References.bib
@@ -121,7 +121,6 @@
   journal  = {Applied Energy},
   year     = {2016},
   volume   = {174},
-  number   = {2016},
   pages    = {118--129},
   issn     = {0306-2619},
   abstract = {Abstract Vertical borehole heat exchangers are used to couple heat pumps to the ground, which serves as a source or sink of heat. These ground source heat pump systems heat and cool buildings efficiently with low maintenance costs. Many heat transfer models use the mean of the inlet and outlet circulating fluid temperatures as an average temperature along the entire borehole length. In this paper a weighting factor for the inlet and outlet temperatures has been developed that can be combined with 1D radial models in order to account for the variations in temperature with depth. The proposed method gives more accurate results than the mean temperature approximation without requiring computationally intensive 3D models. The method has been verified with measured data from thermal response tests on boreholes with single and double U-tubes, as well pipe-in-pipe (coaxial) boreholes. On the other hand, the usual mean temperature approximation sometimes leads to significant errors and unphysical temperatures.},
@@ -136,7 +135,6 @@
   journal  = {Geothermics},
   year     = {2018},
   volume   = {71},
-  number   = {2018},
   pages    = {55--68},
   issn     = {0375-6505},
   abstract = {A recently developed vertical borehole ground heat exchanger model that accounts for transit time effects and time-varying short-circuiting heat transfer has been validated against two multi-flow-rate thermal response tests (MFR-TRT). The MFR-TRT, when performed with a wide range of flow rates, results in significant changes in the borehole thermal resistance, the borehole internal thermal resistance, and the short-circuiting heat transfer between the two legs of a single U-tube. The model accounts for short-circuiting by an analytically computed weighting factor that is used to determine the mean fluid temperature. The weighting factor portion of the model can be readily utilized in other ground heat exchanger models that currently rely on a simple mean fluid temperature. Use of the weighting factor is shown to give significantly better estimations of entering and exiting fluid temperature than using the simple mean fluid temperature. The new model is also compared to an alternative approach - using an effective borehole thermal resistance. While both the effective borehole thermal resistance model and the weighting factor give quite good results a few hours after a step change in flow rate, the weighting factor model gives much better results in the first few hours after a step change in flow rate.},
@@ -285,7 +283,6 @@
   journal  = {International Journal of Heat and Mass Transfer},
   year     = {2014},
   volume   = {70},
-  number   = {2014},
   pages    = {641--650},
   issn     = {0017-9310},
   abstract = {Abstract This paper introduces a new methodology for the generation of thermal response factors of geothermal bore fields using the concept of g-functions introduced by Eskilson. Boreholes are divided into segments to consider the variation of the heat extraction rates along the length of the boreholes and the analytical finite line source (FLS) solution is used to calculate the temperature variations at the wall of each borehole segment along the axial direction. The proposed methodology accounts for the time variation of the heat extraction rates among boreholes and along the length of individual boreholes to obtain a uniform borehole wall temperature equal for all boreholes in accordance with the original boundary conditions proposed by Eskilson. In addition, the methodology is generalized to account for boreholes of different lengths and buried depths. g-Functions calculated with the proposed methodology are compared to the numerical technique used by Eskilson to derive the g-functions for fields of 1 to 12 x 12 boreholes. The difference between the two models is within 5% for all studied bore fields, except for fields of boreholes located on a single row. The variation of the heat extraction rates of individual boreholes along their length as well as in time also showed good agreement with the numerical model. It is shown that using 12 borehole segments is adequate to calculate the g-functions in most practical cases. For instance, the error on the g-function of a 10 x 10 bore field calculated using 12 borehole segments is 2.2% after 20years and 4.7% at steady-state.},
@@ -570,9 +567,10 @@
 @MastersThesis{Grundmann2016,
   author      = {Grundmann, Rachel Marie},
   title       = {Improved Design Methods for Ground Heat Exchangers},
+  school      = {Oklahoma State University},
   year        = {2016},
-  institution = {Oklahoma State University},
   address     = {Stillwater, OK},
+  institution = {Oklahoma State University},
   publisher   = {Oklahoma State University},
   volume      = {M.S.},
 }
@@ -747,7 +745,6 @@
   journal  = {Applied Energy},
   year     = {2017},
   volume   = {187},
-  number   = {2017},
   pages    = {790--806},
   issn     = {0306-2619},
   abstract = {Abstract The borehole thermal resistance - that is, the thermal resistance between the fluid in the U-tube and the borehole wall - is both a key performance characteristic of a closed-loop borehole ground heat exchanger and an important design parameter. Lower borehole thermal resistance leads to better system performance and/or lower total borehole length and possibly lower installation costs. Borehole thermal resistance may be determined using in situ thermal response testing, but for design purposes, it is important to be able to predict the borehole thermal resistance prior to installation. Due to the complexity of calculating it, numerous simplified methods have been proposed. This paper reviews published methods for calculating borehole thermal resistance for grouted boreholes with single U-tubes and compares their results against a rigorous analytical method. Another quantity that is particularly important for deep boreholes is the internal thermal resistance - that is, the thermal resistance between the upward-flowing and downward-flowing fluid paths in the borehole. Short-circuiting between the two legs has the effect of reducing the total heat transfer and can be quantified as an adjustment to the borehole thermal resistance, resulting in an effective borehole thermal resistance. A few simplified methods for calculating internal thermal resistance are compared against a rigorous analytical method. The simplified methods for calculating both borehole thermal resistance and internal thermal resistance are compared in parametric studies spanning the range of borehole diameters, pipe spacing, ground thermal conductivities and grout thermal conductivities found in practice. Many of the simplified methods work well with some combinations of parameters and poorly with others. The first-order multipole expressions are closed-form algebraic expressions that give results within 2% (for borehole thermal resistance) and 6% (for internal thermal resistance) over the entire range of parameters. This represents significantly better accuracy than any of the other simplified methods and, therefore, the first-order multipole algorithm is recommended for single U-tube applications when the tubes are symmetrically placed.},
@@ -982,7 +979,6 @@
   journal  = {Renewable Energy},
   year     = {2014},
   volume   = {68},
-  number   = {2014},
   pages    = {14--24},
   issn     = {0960-1481},
   abstract = {Abstract A novel approach is presented that allows to predict fluid temperatures entering a Ground Heat Exchanger (GHE) for parallel, series and mixed arrangements of boreholes. The method determines at each time step the heat transfer rates occurring at each borehole so as to reproduce the fluid temperature at the GHE inlet for a specific borehole arrangement. The analytical finite line source model is used to compute the borehole wall temperatures, whereas the fluid temperatures are assumed to vary linearly along the pipes. The method requires to solve a linear system of equations at a small number of time steps. The different systems of equations for each arrangement are determined. A comprehensive 3D finite element numerical model shows good agreement with the computed fluid temperatures. The proposed approach is computationally very efficient. The fluid temperature unit response function can be convolved with any desired heat load to estimate fluid temperatures at the GHE inlet for a wide variety of scenarios.},
@@ -1673,7 +1669,6 @@
   pages     = {471--487},
   abstract  = { This article presents a technique to aggregate heating/cooling loads when using the cylindrical heat source method (CHS) to perform annual hourly energy simulations of ground-coupled heat pump (GCHP) systems. The technique, referred to as "multiple load aggregation algorithm" (or MLAA), uses two major thermal history periods, referred to as "past" and "immediate." In addition, the MLAA accounts for thermal interference among boreholes by numerically solving the two-dimensional temperature field in the borefield. Results of a comparison between the MLAA and the duct storage (DST) model are presented. Several cases are examined with two different borefields and several load profiles. Results obtained for one- and ten-year simulations show that the MLAA is in very good agreement with the DST model. In the worst case, the maximum difference in fluid temperature is of the order of 2 K (3.6F). This level of precision is more than adequate to perform accurate hourly simulations of GCHP systems. },
   doi       = {10.1080/10789669.2004.10391115},
-  eprint    = {http://www.tandfonline.com/doi/pdf/10.1080/10789669.2004.10391115},
   publisher = {Taylor \& Francis},
   url       = {http://www.tandfonline.com/doi/abs/10.1080/10789669.2004.10391115},
 }
@@ -1690,7 +1685,7 @@
 
 @PhdThesis{Eskilson1987,
   author  = {Per Eskilson},
-  title   = {Thermal analysis of heat extraction Extrusion},
+  title   = {Thermal analysis of heat extraction boreholes},
   school  = {University of Lund},
   year    = {1987},
   address = {Lund, Sweden},
@@ -1734,14 +1729,6 @@
   volume  = {89},
   number  = {2},
   pages   = {416--440},
-}
-
-@Book{Thomson1884,
-  title     = {Mathematical and Physical Papers},
-  publisher = {University Press},
-  year      = {1884},
-  author    = {W. Thomson},
-  address   = {Cambridge, United Kingdom},
 }
 
 @InBook{LiZhuFang2016,
@@ -1827,7 +1814,7 @@
 }
 
 @TechReport{BennetClaessonHelstrom1987,
-  author      = {J. Bennet and J. Claesson and G. Helstr{\''o}m},
+  author      = {J. Bennet and J. Claesson and G. Helstr{\"o}m},
   title       = {{Multipole Method to Compute the Conductive Heat Flow to and Between Pipes in a Composite Cylinder}},
   institution = {University of Lund, Department of Building and Mathematical Physics},
   year        = {1987},
@@ -1856,6 +1843,108 @@
   volume  = {117},
   number  = {2},
   pages   = {279--288},
+}
+
+@Article{SPITLER20151125,
+  author   = {Jeffrey D. Spitler and Signhild E.A. Gehlin},
+  title    = {Thermal response testing for ground source heat pump systems—An historical review},
+  journal  = {Renewable and Sustainable Energy Reviews},
+  year     = {2015},
+  volume   = {50},
+  pages    = {1125 - 1137},
+  issn     = {1364-0321},
+  abstract = {When designing ground heat exchangers used with ground source heat pump systems, a critical design property is the thermal conductivity of the ground. Thermal response tests are used to measure the site-specific thermal conductivity and are also used to measure the thermal resistance of a borehole heat exchanger as installed. Thermal response tests are commonly used today for design of multiple borehole ground heat exchangers, where knowledge of the ground thermal properties can help avoid undersizing of ground heat exchangers, leading to poor system performance, and oversizing of ground heat exchangers, leading to overly costly systems. This review covers the development of the mathematical and numerical analysis procedures, development of the hardware and test procedures, and validation of the results. We take a historical perspective, going as far back as Lord Kelvin’s treatment of transient heat conduction problems in the 1880s, further development of which allowed analysis of conductivity measurements from transient needle probes by the 1950s. We focus on development of test rigs and test procedures in the 1980s and 1990s and validation of the measurements. More recent developments are covered throughout the review.},
+  doi      = {https://doi.org/10.1016/j.rser.2015.05.061},
+  keywords = {Ground source heat pump systems, Ground heat exchangers, Thermal response tests, Thermal conductivity, In situ measurements},
+  url      = {http://www.sciencedirect.com/science/article/pii/S1364032115005328},
+}
+
+@Book{CarslawJaeger1959,
+  title     = {Conduction of heat in solids},
+  publisher = {Clarendon Press},
+  year      = {1959},
+  author    = {H. S. Carslaw and J. C. Jaeger},
+  address   = {Oxford},
+  edition   = {2nd},
+}
+
+@InBook{GautschiCahill1964,
+  chapter   = {Exponential integral and related functions},
+  pages     = {229},
+  title     = {Handbook of mathematical functions with formulas, graphs, and mathematical tables},
+  publisher = {National Bureau of Standards},
+  year      = {1964},
+  author    = {W. Gautschi and W. F. Cahill},
+  editor    = {M. Abramowitz and I. Stegun},
+  address   = {Washington, DC},
+}
+
+@Article{IngersollPlass1948,
+  author  = {L. R. Ingersoll and H. J. Plass},
+  title   = {Theory of ground pipe heat source for the heat pump},
+  journal = {Heating Piping and Air Conditioning},
+  year    = {1948},
+}
+
+@Article{IngersollPlassIngersoll1951,
+  author  = {L. R. Ingersoll and H. J. Plass and H. Ingersoll},
+  title   = {Theory of earth heat exchangers for the heat pump},
+  journal = {ASHVE Transactions},
+  year    = {1951},
+}
+
+@InProceedings{Morgensen1983,
+  author       = {P. Morgensen},
+  title        = {Fluid to duct wall heat transfer in dust system heat storages},
+  booktitle    = {International Conference onf Subsurface Heat Storage in Theory and Practice},
+  year         = {1983},
+  address      = {Stockholm, Sweden},
+  organization = {Swedish Council for Building Research},
+}
+
+@Article{Bernier2001,
+  author  = {M. A. Bernier},
+  title   = {Ground-Coupled Heat Pump System Simulation},
+  journal = {ASHRAE Transactions},
+  year    = {2001},
+  volume  = {107},
+  number  = {1},
+  pages   = {605--616},
+}
+
+@Book{IngersollZobelIngersoll1954,
+  title     = {Heat conduction: With engineering and geological applications},
+  publisher = {McGraw-Hill},
+  year      = {1954},
+  author    = {L. R. Ingersoll and O. J. Zobel and A. C. Ingersoll},
+  edition   = {2nd},
+}
+
+@Article{DiaoLiFang2004,
+  author  = {N. R. Diao and Q. Y. Li and Z.H Fang},
+  title   = {Heat transfer in ground heat exchangers with ground water advection},
+  journal = {International Journal of Thermal Sciences},
+  year    = {2004},
+  volume  = {43},
+  pages   = {1203--1211},
+}
+
+@Article{ManYangDiaoLiuFang2010,
+  author  = {Y. Man and H. Yang and N. R. Diao and J. Liu and Z. H. Fang},
+  title   = {A new model and analytical solutions for borehole and pile ground heat exchangers},
+  journal = {International Journal of Heat and Mass Transfer},
+  year    = {2010},
+  volume  = {53},
+  pages   = {2593--2601},
+}
+
+@Article{LiLai2012,
+  author  = {M. Li and L. C. K. Lai},
+  title   = {Heat-source solutions to heat conduction in anisotropic media with applications to pile and borehole ground heat exchangers},
+  journal = {Applied Energy},
+  year    = {2012},
+  volume  = {96},
+  pages   = {451--458},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
