--- a/References.bib
+++ b/References.bib
@@ -1947,4 +1947,106 @@
   pages   = {451--458},
 }
 
+@Article{DECARLI20101537,
+  author   = {Michele De Carli and Massimo Tonon and Angelo Zarrella and Roberto Zecchin},
+  title    = {A computational capacity resistance model (CaRM) for vertical ground-coupled heat exchangers},
+  journal  = {Renewable Energy},
+  year     = {2010},
+  volume   = {35},
+  number   = {7},
+  pages    = {1537 - 1550},
+  issn     = {0960-1481},
+  note     = {Special Section: IST National Conference 2009},
+  abstract = {Several models are available in literature to simulate ground heat exchangers. In this paper an approach based on electrical analogy is presented, for this reason named CaRM (CApacity Resistance Model). In some cases several information are needed during design: both the borehole and the surrounding ground are affected by thermal exchange. The model here presented allows to consider the fluid flow pattern along the classical vertical ground heat exchangers as a single U-tube, a double U-tube or coaxial pipes. Besides, ground temperature at different distances from borehole are calculated, taking into account also the thermal interference between more boreholes. Starting from the supply temperature to the heat exchanger, the outlet fluid temperature is calculated and the ground temperature in each node, step by step. The model has been validated by means of a commercial software based on the finite differences method. Further comparisons have been carried out against data from a ground thermal response test and from the survey of an office building equipped with a ground coupled heat pump and vertical double U-tube heat exchangers. The agreement of results validates the model here presented.},
+  doi      = {https://doi.org/10.1016/j.renene.2009.11.034},
+  keywords = {Ground heat pump systems, Low enthalpy geothermal systems, Vertical ground heat exchangers, Ground numerical simulation, Borehole, Borefield},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0960148109005229},
+}
+
+@Article{Bauer2011,
+  author  = {D. Bauer and W. Heidemann and H. M{\"u}ller-Steinhagen and H.-J. G. Diersch},
+  title   = {Thermal resistance and capacity models for borehole heat exchangers},
+  journal = {International Journal of Energy Research},
+  year    = {2011},
+  volume  = {35},
+  pages   = {312--320},
+}
+
+@Article{PASQUIER2014281,
+  author   = {Philippe Pasquier and Denis Marcotte},
+  title    = {Joint use of quasi-3D response model and spectral method to simulate borehole heat exchanger},
+  journal  = {Geothermics},
+  year     = {2014},
+  volume   = {51},
+  pages    = {281 - 299},
+  issn     = {0375-6505},
+  abstract = {A quasi-3D model is used as a response model to generate normalized transfer functions of a borehole heat exchanger model. A solution is achieved by convolving in the spectral domain the transfer function of a given node with an input function describing the temperature change of the fluid over time. To demonstrate the accuracy and validity of the method, three comparison scenarios are studied. These scenarios compare the temperatures of a reference numerical model, the temperatures measured in the scope of a laboratory experiment, and during a field thermal response test. It is shown that the combined use of a spectral method and response model provides, in a few seconds, a temperature solution whose error is below or comparable to the measurement's uncertainty.},
+  doi      = {https://doi.org/10.1016/j.geothermics.2014.02.001},
+  keywords = {Short-time simulation, Spectral method, Quasi-3D TRCM, Thermal response test, Ground coupled heat pump system, Ground or borehole heat exchanger},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0375650514000182},
+}
+
+@Article{PASQUIER201292,
+  author   = {Philippe Pasquier and Denis Marcotte},
+  title    = {Short-term simulation of ground heat exchanger with an improved TRCM},
+  journal  = {Renewable Energy},
+  year     = {2012},
+  volume   = {46},
+  pages    = {92 - 99},
+  issn     = {0960-1481},
+  abstract = {An improvement to the thermal resistance capacity model (TRCM) used to model borehole heat exchangers is presented. Here, the original model is extended to integrate the thermal capacities of the heat carrier fluid and pipe and to better account for the spacing between the pipes. Model results are compared to results provided by numerical models and show very good agreement. It is shown that the improved model brings a significant improvement for short times over the original model, allowing a rapid computation of the temperature response function at virtually any time and distance from a single borehole.},
+  doi      = {https://doi.org/10.1016/j.renene.2012.03.014},
+  keywords = {TRCM, Equivalent thermal borehole resistance, Ground heat exchanger, Short-time simulation},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0960148112002017},
+}
+
+@Article{ZARRELLA20112357,
+  author   = {Angelo Zarrella and Massimiliano Scarpa and Michele De Carli},
+  title    = {Short time step analysis of vertical ground-coupled heat exchangers: The approach of CaRM},
+  journal  = {Renewable Energy},
+  year     = {2011},
+  volume   = {36},
+  number   = {9},
+  pages    = {2357 - 2367},
+  issn     = {0960-1481},
+  abstract = {In this paper an improvement of the model CaRM (CApacity Resistance Model) is presented to consider the borehole thermal capacitance, both of the filling material of the borehole and of the heat carrier fluid inside the ground heat exchanger. Several models, numerical and analytical, are available in literature for short time step analyses of ground-coupled heat pump systems. According to the modelling for the surrounding ground, the new approach for the inside of the borehole is based on electrical analogy. In this study the double U-tube ground heat exchanger is analyzed. The new model has been validated by means of a commercial software based on the finite elements method as well as measurements of ground response test, using a suitable plant system. In this last comparison, the contribution of the thermal capacitance of the circulating fluid is investigated, since it is frequently neglected in short time step simulations. In both cases, there is agreement between the CaRM results and data from numerical simulations and measurements as well.},
+  doi      = {https://doi.org/10.1016/j.renene.2011.01.032},
+  keywords = {Ground heat pump systems, Vertical ground heat exchangers, Ground numerical simulation, Borehole, Borefield, Short time response},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0960148111000541},
+}
+
+@Article{ZARRELLA2013358,
+  author   = {Angelo Zarrella and Antonio Capozza and Michele De Carli},
+  title    = {Analysis of short helical and double U-tube borehole heat exchangers: A simulation-based comparison},
+  journal  = {Applied Energy},
+  year     = {2013},
+  volume   = {112},
+  number   = {Supplement C},
+  pages    = {358 - 370},
+  issn     = {0306-2619},
+  abstract = {This paper makes a comparative analysis between a helical-shaped pipe and a double U-tube ground heat exchanger. The two configurations were installed at a shallow depth and studied, since a depth limit is mandatory in some areas. When installed this way, the interaction between the ground surface and the ambient environment needs to be taken into account when the thermal behaviour of the ground heat exchangers is investigated.
+A detailed numerical simulation tool was used to carry out this research. The problem of heat transfer was solved with an equivalent electrical circuit of thermal resistances and capacitances. This simulation tool was also used on a double U-tube heat exchanger in order to include axial heat conduction in the ground and the borehole.
+The two borehole heat exchangers were analyzed over both long- and short-term periods; the thermal properties of the ground, energy loads and the axial effects of weather conditions were also taken into account. Finally, a reduction in the borehole length for the helical-shaped pipe was also assessed and compared with the performance of the double U-tube.},
+  doi      = {https://doi.org/10.1016/j.apenergy.2013.06.032},
+  keywords = {Ground source heat pump systems, Ground heat exchanger, Helical pipe, Numerical simulation, Short borehole, Heat transfer},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0306261913005394},
+}
+
+@Article{Al-Khoury2011,
+  author   = {Rafid Al-Khoury},
+  title    = {Spectral framework for geothermal borehole heat exchangers},
+  journal  = {International Journal of Numerical Methods for Heat \& Fluid Flow},
+  year     = {2010},
+  volume   = {20},
+  number   = {7},
+  pages    = {773--793},
+  abstract = { Purpose – This paper aims to present a framework for deriving analytical and semi‐numerical models for coupled conductive‐convective heat transfer processes in a borehole heat exchanger subjected to general initial and boundary conditions.Design/methodology/approach – The discrete Fourier transform and the spectral element method have been utilized for deriving two spectral models for a single U‐tube borehole heat exchanger in contact with a soil mass.Findings – Verification and numerical examples have shown that the developed models are accurate and computationally very efficient. It is illustrated that one spectral element is capable of producing results which are more accurate than those produced by 200 finite elements.Practical implications – The gained computational efficiency and accuracy will boost considerably the possibilities for more insight into geothermal analysis, which will improve the procedure for designing competitive energy extraction systems.Originality/value – The models are capable of calculating exactly the temperature distribution in all involved borehole heat exchanger components and their thermal interactions. },
+  doi      = {10.1108/09615531011065566},
+  eprint   = {https://doi.org/10.1108/09615531011065566},
+  url      = { 
+        https://doi.org/10.1108/09615531011065566
+    
+},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
