--- a/References.bib
+++ b/References.bib
@@ -610,12 +610,12 @@
 }
 
 @InProceedings{Hani2010,
-  author    = {Hani, A. and Britikovski, I. and Voll, H. and K{\~o}iv, T. A.},
-  title     = {Sea Water District Cooling Feasibility Analysis for Tallinn},
-  series    = {The 12th International Symposium on District Heating and Cooling},
-  pages     = {153--156},
-  year      = {2010},
-  address   = {Tallinn, Estonia},
+  author  = {Hani, A. and Britikovski, I. and Voll, H. and K{\~o}iv, T. A.},
+  title   = {Sea Water District Cooling Feasibility Analysis for Tallinn},
+  year    = {2010},
+  series  = {The 12\textsuperscript{th} International Symposium on District Heating and Cooling},
+  pages   = {153--156},
+  address = {Tallinn, Estonia},
 }
 
 @MastersThesis{Hansen2011,
@@ -829,10 +829,10 @@
 }
 
 @Book{Kays2005,
-  title     = {Convective Heat and Mass Transfer 4th Edition},
+  title     = {Convective Heat and Mass Transfer 4\textsuperscript{th} Edition},
   publisher = {McGraw-HIll},
-  author    = {Kays, William and Crawford, Michael and Weigand, Bernhard},
   year      = {2005},
+  author    = {Kays, William and Crawford, Michael and Weigand, Bernhard},
   address   = {New York, NY},
 }
 
@@ -933,7 +933,7 @@
 @InProceedings{Liu2003,
   author    = {Xiaobing Liu and Simon J. Rees and Jeffrey D. Spitler},
   title     = {Simulation of a Geothermal Bridge Deck Anti-icing System and Experimental Validation},
-  booktitle = {Proceedings of the Transportation Research Board 82nd Annual Meeting},
+  booktitle = {Proceedings of the Transportation Research Board 82\textsuperscript{nd} Annual Meeting},
   year      = {2003},
   address   = {Washington, D.C.},
 }
@@ -1702,7 +1702,7 @@
 @InProceedings{SpitlerSouthardLiu2017,
   author    = {Jeffrey D. Spitler and Laura E. Southard and Xiaobing Liu},
   title     = {Ground-source and air-source heat pump system performance at the {ASHRAE} headquarters building},
-  booktitle = {12th IEA Heat Pump Conference},
+  booktitle = {12\textsuperscript{th} IEA Heat Pump Conference},
   year      = {2017},
   address   = {Rotterdam, Netherlands},
 }
@@ -1808,7 +1808,7 @@
 @InProceedings{XuSpitler2006,
   author    = {X. Xu and Jeffrey D. Spitler},
   title     = {{Modeling of Vertical Ground Loop Heat Exchangers with Variable Convective Resistance and Thermal Mass of the Fluid}},
-  booktitle = {Proceedings of the 10th International Conference on Thermal Energy Storage-Ecostock 2006},
+  booktitle = {Proceedings of the 10\textsuperscript{th} International Conference on Thermal Energy Storage-Ecostock 2006},
   year      = {2006},
   address   = {Pomona, NJ},
 }
@@ -1847,11 +1847,11 @@
 
 @Article{SPITLER20151125,
   author   = {Jeffrey D. Spitler and Signhild E.A. Gehlin},
-  title    = {Thermal response testing for ground source heat pump systems—An historical review},
+  title    = {Thermal response testing for ground source heat pump systems---An historical review},
   journal  = {Renewable and Sustainable Energy Reviews},
   year     = {2015},
   volume   = {50},
-  pages    = {1125 - 1137},
+  pages    = {1125--1137},
   issn     = {1364-0321},
   abstract = {When designing ground heat exchangers used with ground source heat pump systems, a critical design property is the thermal conductivity of the ground. Thermal response tests are used to measure the site-specific thermal conductivity and are also used to measure the thermal resistance of a borehole heat exchanger as installed. Thermal response tests are commonly used today for design of multiple borehole ground heat exchangers, where knowledge of the ground thermal properties can help avoid undersizing of ground heat exchangers, leading to poor system performance, and oversizing of ground heat exchangers, leading to overly costly systems. This review covers the development of the mathematical and numerical analysis procedures, development of the hardware and test procedures, and validation of the results. We take a historical perspective, going as far back as Lord Kelvin’s treatment of transient heat conduction problems in the 1880s, further development of which allowed analysis of conductivity measurements from transient needle probes by the 1950s. We focus on development of test rigs and test procedures in the 1980s and 1990s and validation of the measurements. More recent developments are covered throughout the review.},
   doi      = {https://doi.org/10.1016/j.rser.2015.05.061},
@@ -1865,7 +1865,7 @@
   year      = {1959},
   author    = {H. S. Carslaw and J. C. Jaeger},
   address   = {Oxford},
-  edition   = {2nd},
+  edition   = {2\textsuperscript{nd}},
 }
 
 @InBook{GautschiCahill1964,
@@ -1917,7 +1917,7 @@
   publisher = {McGraw-Hill},
   year      = {1954},
   author    = {L. R. Ingersoll and O. J. Zobel and A. C. Ingersoll},
-  edition   = {2nd},
+  edition   = {2\textsuperscript{nd}},
 }
 
 @Article{DiaoLiFang2004,
@@ -1954,7 +1954,7 @@
   year     = {2010},
   volume   = {35},
   number   = {7},
-  pages    = {1537 - 1550},
+  pages    = {1537--1550},
   issn     = {0960-1481},
   note     = {Special Section: IST National Conference 2009},
   abstract = {Several models are available in literature to simulate ground heat exchangers. In this paper an approach based on electrical analogy is presented, for this reason named CaRM (CApacity Resistance Model). In some cases several information are needed during design: both the borehole and the surrounding ground are affected by thermal exchange. The model here presented allows to consider the fluid flow pattern along the classical vertical ground heat exchangers as a single U-tube, a double U-tube or coaxial pipes. Besides, ground temperature at different distances from borehole are calculated, taking into account also the thermal interference between more boreholes. Starting from the supply temperature to the heat exchanger, the outlet fluid temperature is calculated and the ground temperature in each node, step by step. The model has been validated by means of a commercial software based on the finite differences method. Further comparisons have been carried out against data from a ground thermal response test and from the survey of an office building equipped with a ground coupled heat pump and vertical double U-tube heat exchangers. The agreement of results validates the model here presented.},
@@ -1978,7 +1978,7 @@
   journal  = {Geothermics},
   year     = {2014},
   volume   = {51},
-  pages    = {281 - 299},
+  pages    = {281--299},
   issn     = {0375-6505},
   abstract = {A quasi-3D model is used as a response model to generate normalized transfer functions of a borehole heat exchanger model. A solution is achieved by convolving in the spectral domain the transfer function of a given node with an input function describing the temperature change of the fluid over time. To demonstrate the accuracy and validity of the method, three comparison scenarios are studied. These scenarios compare the temperatures of a reference numerical model, the temperatures measured in the scope of a laboratory experiment, and during a field thermal response test. It is shown that the combined use of a spectral method and response model provides, in a few seconds, a temperature solution whose error is below or comparable to the measurement's uncertainty.},
   doi      = {https://doi.org/10.1016/j.geothermics.2014.02.001},
@@ -1992,7 +1992,7 @@
   journal  = {Renewable Energy},
   year     = {2012},
   volume   = {46},
-  pages    = {92 - 99},
+  pages    = {92--99},
   issn     = {0960-1481},
   abstract = {An improvement to the thermal resistance capacity model (TRCM) used to model borehole heat exchangers is presented. Here, the original model is extended to integrate the thermal capacities of the heat carrier fluid and pipe and to better account for the spacing between the pipes. Model results are compared to results provided by numerical models and show very good agreement. It is shown that the improved model brings a significant improvement for short times over the original model, allowing a rapid computation of the temperature response function at virtually any time and distance from a single borehole.},
   doi      = {https://doi.org/10.1016/j.renene.2012.03.014},
@@ -2007,7 +2007,7 @@
   year     = {2011},
   volume   = {36},
   number   = {9},
-  pages    = {2357 - 2367},
+  pages    = {2357--2367},
   issn     = {0960-1481},
   abstract = {In this paper an improvement of the model CaRM (CApacity Resistance Model) is presented to consider the borehole thermal capacitance, both of the filling material of the borehole and of the heat carrier fluid inside the ground heat exchanger. Several models, numerical and analytical, are available in literature for short time step analyses of ground-coupled heat pump systems. According to the modelling for the surrounding ground, the new approach for the inside of the borehole is based on electrical analogy. In this study the double U-tube ground heat exchanger is analyzed. The new model has been validated by means of a commercial software based on the finite elements method as well as measurements of ground response test, using a suitable plant system. In this last comparison, the contribution of the thermal capacitance of the circulating fluid is investigated, since it is frequently neglected in short time step simulations. In both cases, there is agreement between the CaRM results and data from numerical simulations and measurements as well.},
   doi      = {https://doi.org/10.1016/j.renene.2011.01.032},
@@ -2022,7 +2022,7 @@
   year     = {2013},
   volume   = {112},
   number   = {Supplement C},
-  pages    = {358 - 370},
+  pages    = {358--370},
   issn     = {0306-2619},
   abstract = {This paper makes a comparative analysis between a helical-shaped pipe and a double U-tube ground heat exchanger. The two configurations were installed at a shallow depth and studied, since a depth limit is mandatory in some areas. When installed this way, the interaction between the ground surface and the ambient environment needs to be taken into account when the thermal behaviour of the ground heat exchangers is investigated.
 A detailed numerical simulation tool was used to carry out this research. The problem of heat transfer was solved with an equivalent electrical circuit of thermal resistances and capacitances. This simulation tool was also used on a double U-tube heat exchanger in order to include axial heat conduction in the ground and the borehole.
